Bug 164383 - Accessibility sidebar gives "Avoid simulated captions" warning for caption frame
Summary: Accessibility sidebar gives "Avoid simulated captions" warning for caption frame
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.0.2 target:...
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2024-12-19 17:20 UTC by Gabor Kelemen (Collabora)
Modified: 2025-01-25 20:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (68.26 KB, application/vnd.oasis.opendocument.text)
2024-12-19 17:20 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issue (123.17 KB, image/png)
2024-12-19 17:21 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-12-19 17:20:52 UTC
Created attachment 198180 [details]
Example file from Writer

Attached example file has an image inside a caption frame with a caption.
The Accessibility sidebar gives an "Avoid simulated captions" warning about this construct, but it should not, as this frame is the way to correctly caption an image.

1. Open attached file
2. Open the Accessibility sidebar
-> there are two warnings about simulated captions, but in case of the first image it should not complain. 
That frame was made with the right click - Insert Caption command, so the caption should stay with the image no matter what.

Version: 25.2.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: a49bea44b7989afd850e9a4a56c2c8a0d1a1ff37
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2024-12-19 17:21:35 UTC
Created attachment 198181 [details]
Screenshot of the issue
Comment 2 BogdanB 2024-12-21 15:57:55 UTC
Confirm with
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 186e997c559c7e5d4b9462f9b4be6a935cdd04cd
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2024-12-23 08:46:33 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/78dbd341bb5023448af2c3eefceb5a840fd6d8d9

tdf#164383 - sw a11y fix unnecessary "Avoid simulated captions" warning

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-12-23 10:00:48 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/25f8ae6ebd2a983d1c8f7c98842c30c03112f84c

tdf#164383 - sw a11y fix unnecessary "Avoid simulated captions" warning

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-01-25 20:33:17 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/5abe16625bb8fad3eb98d1b0741e119c6a62e8ec

tdf#164383 - sw a11y fix unnecessary "Avoid simulated captions" warning

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.