tdf#164383 - sw a11y fix unnecessary "Avoid simulated captions" warning

for caption frame.

We should not have "Avoid simulated captions" warning about correct captions.

Change-Id: I57fe53c5f9e1aa2affe0aec6520d1d6eed5d6990
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178927
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit 78dbd341bb5023448af2c3eefceb5a840fd6d8d9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180617
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>